<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingHorizontal="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/create_new_recipe"
        android:fontFamily="@font/fira_sans_extra_condensed_medium"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="@dimen/recipe_creation_step_num_size"
            android:layout_height="@dimen/recipe_creation_step_num_size"
            android:background="@drawable/circle_with_brown_stroke"
            android:fontFamily="@font/fira_sans_extra_condensed_regular"
            android:text="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_in_main_info"
            android:fontFamily="@font/fira_sans_extra_condensed_regular"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dish_name"
        android:fontFamily="@font/fira_sans_extra_condensed_light"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_input_height"
        android:background="@drawable/form_input_bg"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:fontFamily="@font/fira_sans_extra_condensed_light"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/form_input_bg"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_in_kitchen"
        android:fontFamily="@font/fira_sans_extra_condensed_light"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="@dimen/form_small_input_width"
        android:layout_height="@dimen/form_input_height"
        android:background="@drawable/form_input_bg"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/read_in"
        android:fontFamily="@font/fira_sans_extra_condensed_light"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="@dimen/form_small_input_width"
        android:layout_height="@dimen/form_input_height"
        android:background="@drawable/form_input_bg"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="@dimen/recipe_creation_step_num_size"
            android:layout_height="@dimen/recipe_creation_step_num_size"
            android:background="@drawable/circle_with_brown_stroke"
            android:fontFamily="@font/fira_sans_extra_condensed_regular"
            android:text="2"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_main_photo"
            android:fontFamily="@font/fira_sans_extra_condensed_regular"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/dish_photo_placeholder"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="@dimen/recipe_creation_step_num_size"
            android:layout_height="@dimen/recipe_creation_step_num_size"
            android:background="@drawable/circle_with_brown_stroke"
            android:fontFamily="@font/fira_sans_extra_condensed_regular"
            android:text="3"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_ingredients"
            android:fontFamily="@font/fira_sans_extra_condensed_regular"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/how_many_portions"
        android:fontFamily="@font/fira_sans_extra_condensed_light"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="@dimen/form_small_input_width"
        android:layout_height="@dimen/form_input_height"
        android:background="@drawable/form_input_bg"
        android:layout_marginTop="5dp"
        android:inputType="number"/>

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/ingredientsRecyclerView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       tools:itemCount="2"
       tools:listitem="@layout/item_ingredient_add"
       android:nestedScrollingEnabled="false"/>

    <AutoCompleteTextView
        android:id="@+id/productsSearchTV"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/productsRecyclerView"
        android:layout_marginTop="15dp"
        android:background="@drawable/product_search_bg"
        android:completionThreshold="1"
        android:fontFamily="@font/fira_sans_extra_condensed_light"
        android:hint="@string/enter_product_title"
        android:paddingStart="15dp"
        android:popupBackground="@drawable/products_search_hints_bg"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="@dimen/recipe_creation_step_num_size"
            android:layout_height="@dimen/recipe_creation_step_num_size"
            android:background="@drawable/circle_with_brown_stroke"
            android:fontFamily="@font/fira_sans_extra_condensed_regular"
            android:text="4"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/describe_steps"
            android:fontFamily="@font/fira_sans_extra_condensed_regular"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stepsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        tools:listitem="@layout/item_step_add"
        tools:itemCount="1"
        android:nestedScrollingEnabled="false"/>

    <Button
        android:id="@+id/addStepBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/materialIconButtonFilledStyle"
        app:icon="@drawable/icon_plus"
        app:iconTint="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/active_login_button_bg"
        android:fontFamily="@font/fira_sans_extra_condensed_regular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minHeight="0dp"
        android:text="@string/create_recipe"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>